maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:2: error: illegal start of statement (no modifiers allowed here)
  override def run() {
  ^